<resources>
    <string name="app_name">Abakus 3000</string>
    <string name="lbl_btn_calculator">Kalkulačka</string>
    <string name="lbl_btn_prevody">Prevody</string>
    <string name="lbl_btn_funkcie">Funkcie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lbl_btn_kvad">Kvadratická rovnica</string>
    <string name="lbl_rovnica">ax^2 + bx + c = 0</string>
    <string name="lbl_zadajRov">Zadaj rovnicu v trave</string>
    <string name="lbl_btn_spocitaj">Spočítaj</string>
    <string name="dialog_title">Riešenie rovnice</string>
    <string name="lbl_nemaRiesenie">Rovnica nemá riešenie alebo si ju zadal v nesprávnom tvare</string>
    <string name="lbl_btn_goniom">Goniometrické funkcie</string>
    <string name="lbl_abakus" translatable="false">Abakus 3000</string>
    <string name="lbl_zadajUhol">Zadaj uhol v stuňoch</string>
    <string name="lbl_hranol">Hranol</string>
    <string name="lbl_zadajStrany">Zadaj dĺžky strán v tvare</string>
    <string name="lbl_strany" translatable="false">a,b,c</string>
    <string name="lbl_zlyVstup">Zadal si nesprávny vstup</string>
    <string name="lbl_chybaVstupu">Chyba vstupu</string>
    <string name="lbl_valec">Valec</string>
    <string name="lbl_gula">Guľa</string>
    <string name="lbl_zadajValec">Zadaj polomer a výšku v tvare</string>
    <string name="lbl_polomer" translatable="false">r,v</string>
    <string name="lbl_zadajGulu">Zadaj polomer gule</string>
</resources>
