<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="umb.daniel.abakus3000.mainActivities.functionsActivities.GoniomActivity">

    <TextView
        android:id="@+id/txtGoniom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/lbl_btn_goniom"
        android:layout_marginTop="45dp"
        style="@style/stl_texts"/>

    <TextView
        android:id="@+id/txtZadaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_zadajUhol"
        android:layout_marginTop="60dp"
        style="@style/stl_texts" />

    <TextView
        android:id="@+id/txtSin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/stl_texts"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtCos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/stl_texts"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtTan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/stl_texts"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:textAlignment="center"
        android:layout_marginRight="35dp"
        android:inputType="numberDecimal"
        android:layout_marginTop="60dp"
        style="@style/stl_inputs"/>

    <Button
        android:id="@+id/btn_rataj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_btn_spocitaj"
        style="@style/stl_btns_main"/>

</LinearLayout>
</layout>